--- a/style.css
+++ b/style.css
@@ -84,6 +84,10 @@ footer {
 }
 
 footer input {
+    font-family: roboto, sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21.09px;
     height: 100%;
     width: 100%;
     padding-left: 17px;
