--- a/style.css
+++ b/style.css
@@ -39,9 +39,12 @@ header img:last-of-type {
 main {
     width: 100%;
     margin-top: 80px;
-    margin-bottom: 80px;
+    margin-bottom: 100px;
     overflow-y: scroll;
     overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
 }
 
 .main::-webkit-scrollbar {
